On branch main Changes to be committed: 	deleted:    .cursor/rules/rule1.mdc 	new file:   .gitignore 	modified:   .specstory/.what-is-this.md 	modified:   .vscode/settings.json 	deleted:    anime-social-platform/README.md 	new file:   anime-social-platform/backend/README.md 	modified:   anime-social-platform/backend/pom.xml 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/ElasticsearchConfig.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/AuthController.java 	deleted:    anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/FriendshipController.java 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/RecommendController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/TagController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/service/UserTagService.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/service/impl/ElasticsearchServiceImpl.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/service/impl/TagServiceImpl.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/service/impl/UserServiceImpl.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/service/impl/UserTagServiceImpl.java 	new file:   anime-social-platform/backend/src/main/resources/database/E-R.mwb 	new file:   anime-social-platform/backend/src/test/java/com/animesocial/platform/controller/PostControllerTest.java 	new file:   anime-social-platform/backend/src/test/java/com/animesocial/platform/controller/ResourceControllerTest.java 	new file:   anime-social-platform/backend/src/test/java/com/animesocial/platform/controller/SearchControllerTest.java 	new file:   anime-social-platform/backend/src/test/java/com/animesocial/plat